menu no longer pops-out *behind* the designer sidebar

--- a/ChessMaker/Content/designer/base.css
+++ b/ChessMaker/Content/designer/base.css
@@ -22,6 +22,7 @@ form {
     bottom:0;
     left:0.1em;
     width:14.5em;
+    z-index:-1;
 }
 
 #sidebar .section {
